objects/invy__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>inys</relationshipLabel>
        <relationshipName>inys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>closur_date__c</fullName>
        <label>closur date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invy_balance__c</fullName>
        <label>invy balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>invy_date__c</fullName>
        <label>invy date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invy_number__c</fullName>
        <label>invy amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>paid_bal__c</fullName>
        <formula>invy_number__c  -  invy_balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>paid bal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>invy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>invy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>inys</pluralLabel>
    <recordTypes>
        <fullName>newrecordtype</fullName>
        <active>true</active>
        <label>newrecordtype</label>
    </recordTypes>
    <recordTypes>
        <fullName>newrecordtype2</fullName>
        <active>true</active>
        <label>newrecordtype2</label>
    </recordTypes>
    <recordTypes>
        <fullName>vechile</fullName>
        <active>true</active>
        <label>vechile</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>